--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "live-radio",
+  "name": "remote-music-player",
   "version": "1.0.0",
-  "description": "A simple live radio-like server using Express.js",
+  "description": "A remote music player control panel",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js" 
   },
-  "author": "Your Name",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.17.1", 
+    "body-parser": "^1.19.0", 
+    "cors": "^2.8.5" 
   }
 }
+
